@@ -14,48 +14,53 @@ if (localPropertiesFile.exists()) {
 
 android {
     namespace 'com.example.smkituidemoapp'
-    compileSdk 34
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.example.smkituidemoapp"
         minSdk 29
-        targetSdk 34
+        targetSdk 36
         versionCode 1
         versionName "1.0"
-
-        buildConfigField 'boolean', 'IS_PROD', "false"
-        buildConfigField "String", "sdk_auth_key", "\"${localProperties['sdk_auth_key']}\""
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
-        debug {
-            manifestPlaceholders = [appIcon: "@mipmap/ic_launcher_dev"]
-            shrinkResources false
-        }
         release {
             minifyEnabled false
             debuggable true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-
-            buildConfigField 'boolean', 'IS_PROD', "true"
-
-            manifestPlaceholders = [appIcon: "@mipmap/ic_launcher_prod"]
-            signingConfig signingConfigs.debug
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
+
+    // ⭐ ADD THIS KAPT CONFIGURATION ⭐
+    kapt {
+        javacOptions {
+            option("--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
+            option("--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
+            option("--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
+            option("--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
+            option("--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
+            option("--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
+            option("--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
+        }
+    }
+
     buildFeatures {
         dataBinding true
         viewBinding true
     }
+
     packagingOptions {
         pickFirst '**/*.so'
     }
@@ -88,5 +93,4 @@ dependencies {
     // Kotlin components
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-
 }
